--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "es",
     "dist"
   ],
+  "dependencies": {
+  
+  },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
     "@types/jest": "^23.1.4",
@@ -42,7 +45,7 @@
     "@types/react-router-dom": "^4.2.7",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-thunk": "^2.1.0",
-    "antd": "^3.6.5",
+    "antd":"^3.9.2",
     "async": "^0.9.0",
     "babel-runtime": "6.x",
     "bluebird": "~2.9.30",
@@ -60,7 +63,16 @@
     "redux-thunk": "^2.3.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "babel-preset-env":"^1.7.0",
+    "babel-preset-stage-3":"^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
+    "babel-plugin-add-module-exports":"^1.0.0",
+    "babel-plugin-react-require":"^3.0.0",
+    "babel-plugin-syntax-dynamic-import":"^6.18.0",
+    "babel-plugin-transform-decorators":"^6.24.1",
+    "babel-plugin-transform-import": "^1.5.4",
+    "babel-plugin-import":"^1.9.1"
   },
   "bugs": {
     "url": "https://github.com/yanxlg/kxt-web/issues"
