--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "dist"
   ],
   "dependencies": {
-    "cropperjs": "^1.4.1",
+    "cropperjs": "^1.4.2",
     "chimee":"^0.11.0",
     "chimee-kernel-flv":"^1.4.10",
     "chimee-plugin-popup":"^0.0.7",
     "chimee-plugin-controlbar":"^0.5.0",
     "chimee-plugin-center-state":"^0.0.11",
     "chimee-plugin-contextmenu":"^0.1.2",
-    "react-redux":"^5.1.1"
+    "react-redux":"^5.1.1",
+    "perfect-scrollbar":"^1.4.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
