--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kxt-web",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -32,15 +32,14 @@
     "dist"
   ],
   "dependencies": {
-    "cropperjs": "^1.4.2",
+    "cropperjs": "^1.4.1",
     "chimee":"^0.11.0",
     "chimee-kernel-flv":"^1.4.10",
     "chimee-plugin-popup":"^0.0.7",
     "chimee-plugin-controlbar":"^0.5.0",
     "chimee-plugin-center-state":"^0.0.11",
     "chimee-plugin-contextmenu":"^0.1.2",
-    "react-redux":"^5.1.1",
-    "perfect-scrollbar":"^1.4.0"
+    "react-redux":"^5.1.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
