--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kxt-web",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "description": "",
   "repository": {
     "type": "git",
@@ -39,7 +39,9 @@
     "chimee-plugin-controlbar":"^0.5.0",
     "chimee-plugin-center-state":"^0.0.11",
     "chimee-plugin-contextmenu":"^0.1.2",
-    "react-redux":"^5.1.1"
+    "react-redux":"^5.1.1",
+    "rebound": "^0.1.0",
+    "lodash-decorators": "^6.0.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
