--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kxt-web",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "",
   "repository": {
     "type": "git",
@@ -8,8 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "main": "./lib/index",
-  "module": "./es/index",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "watch-tsc": "rc-tools run watch-tsc",
     "build": "rc-tools run build",
