--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kxt-web",
-  "version": "1.6.8",
+  "version": "1.6.9",
   "description": "",
   "repository": {
     "type": "git",
@@ -42,7 +42,10 @@
     "chimee-plugin-contextmenu":"^0.1.2",
     "rebound": "^0.1.0",
     "lodash-decorators": "^6.0.1",
-    "perfect-scrollbar": "^1.4.0"
+    "perfect-scrollbar": "^1.4.0",
+    "react-custom-scroll": "^4.0.1",
+    "react-custom-scrollbars": "^4.2.1",
+    "@types/react-custom-scrollbars": "^4.0.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.4",
